dotnet_macros/tests/ui/dotnet_export_unknown_key.stderr
error: #[dotnet_export]: unknown attribute key; expected `name = "ManagedName"`, `error = "exception"`, or `enums(Type, ...)`
 --> tests/ui/dotnet_export_unknown_key.rs:3:17
  |
3 | #[dotnet_export(rename = "ParsePosition")]
  |                 ^^^^^^
